More changes towards CMake port. Some issues with VTK still on Mac. Other than that, the main library seems to be building. Still need to add modules and install!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,20 +32,25 @@ ExternalProject_Add(YAML-CPP
     PREFIX ${CMAKE_CURRENT_BINARY_DIR}/external/yaml-cpp
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
 )
+add_compile_options(-DHAVE_YAMLCPP) 
 
 # tinyxml2, this library is used for XML IO 
-ExternalProject_Add(TINYXML2
-	GIT_REPOSITORY "https://github.com/leethomason/tinyxml2.git"
-	GIT_TAG  "master"
-	UPDATE_COMMAND ""
-	PATCH_COMMAND ""
-    PREFIX ${CMAKE_CURRENT_BINARY_DIR}/external/tinyxml2
-    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
-)
+option(TINYXML_SUPPORT  "MATIO library support for MATLAB .mat files" OFF)
+if ( TINYXML_SUPPORT )
+	ExternalProject_Add(TINYXML2
+		GIT_REPOSITORY "https://github.com/leethomason/tinyxml2.git"
+		GIT_TAG  "master"
+		UPDATE_COMMAND ""
+		PATCH_COMMAND ""
+    	PREFIX ${CMAKE_CURRENT_BINARY_DIR}/external/tinyxml2
+    	CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
+	)
+	add_compile_options(-DTINYXMLSUPPORT) 
+endif()
 
-option(MATIO_SUPPORT  "MATIO library support for MATLAB .mat files" ON)
-
+option(MATIO_SUPPORT  "MATIO library support for MATLAB .mat files" OFF)
 if ( MATIO_SUPPORT )
+	add_compile_options(-DHAVE_MATIO) 
 	# matio, this library is used for MATLAB file IO
 	ExternalProject_ADD(MATIO
 		GIT_REPOSITORY  "git://git.code.sf.net/p/matio/matio"
@@ -65,9 +70,15 @@ endif()
 #####################
 project(LEMMA_CXX)
 
-# We don't Build VTK, it is too much. 
-find_package(VTK 6 REQUIRED NO_MODULE)
-include(${VTK_USE_FILE})
+# We don't Build VTK, it is too much.
+option (VTK_SUPPORT "VTK library for visualisation and grids" OFF)
+if (VTK_SUPPORT) 
+	find_package(VTK 6 REQUIRED NO_MODULE)
+	include(${VTK_USE_FILE})
+	add_compile_options(-DLEMMAUSEVTK) 
+endif()
+
+add_compile_options(-std=c++11) 
 
 set(LEMMA_VERSION_MAJOR "0")
 set(LEMMA_VERSION_MINOR "0")
@@ -87,7 +98,7 @@ link_directories ("${CMAKE_INSTALL_PREFIX}/lib/")
 add_subdirectory (LemmaCore) 
 
 # TODO add compiler specific instructions
-add_compile_options(-std=c++11) 
+
 
 include_directories(${CMAKE_INSTALL_PREFIX}/include)
 add_executable(Hello "${PROJECT_SOURCE_DIR}/src/test.cpp")
