--- a/LemmaCore/CMakeLists.txt
+++ b/LemmaCore/CMakeLists.txt
@@ -1,25 +1,18 @@
 include_directories(${CMAKE_INSTALL_PREFIX}/include)
 
-add_compile_options(-std=c++11 -DHAVE_YAMLCPP) 
-
-#file(GLOB LemmaCore_SRC
-#    "${CMAKE_CURRENT_DIR}/src/*.cpp"
-#)
 add_subdirectory("src")
 
-# TODO fill all the files
 add_library( lemmacore ${SOURCE} )  
-#		"src/lemma.cpp" 
-#		"src/dipolesource.cpp" 
-#		"src/GroundedElectricDipole.cpp" 
-#		"src/UngroundedElectricDipole.cpp"
-#)
 
-
+# Linking
 add_dependencies(lemmacore YAML-CPP)
-add_dependencies(lemmacore TINYXML2)
+if (TINYXML_SUPPORT)
+	add_dependencies(lemmacore TINYXML2)
+endif()
 if (MATIO_SUPPORT)
 	add_dependencies(lemmacore MATIO)
 endif()
-target_link_libraries(lemmacore ${VTK_LIBRARIES})
+if (VTK_SUPPORT) 
+	target_link_libraries(lemmacore ${VTK_LIBRARIES})
+endif()
 target_link_libraries(lemmacore "yaml-cpp")
