Added examples to CMake build and commented out FastDelegte calls. Still need to replace those calls with move semantics.

--- a/LemmaCore/CMakeLists.txt
+++ b/LemmaCore/CMakeLists.txt
@@ -16,3 +16,5 @@ if (VTK_SUPPORT)
 	target_link_libraries(lemmacore ${VTK_LIBRARIES})
 endif()
 target_link_libraries(lemmacore "yaml-cpp")
+
+add_subdirectory(examples)
