--- a/LemmaCore/CMakeLists.txt
+++ b/LemmaCore/CMakeLists.txt
@@ -14,7 +14,11 @@ if (MATIO_SUPPORT)
 endif()
 if (VTK_SUPPORT) 
 	target_link_libraries(lemmacore ${VTK_LIBRARIES})
+	target_link_libraries(lemmacore "matplot")
 endif()
 target_link_libraries(lemmacore "yaml-cpp")
 
-add_subdirectory(examples)
+option( BUILDEXAMPLES "Compile example Lemma applications" OFF )
+if (BUILDEXAMPLES)
+	add_subdirectory(examples)
+endif()
