--- a/Matplot_vtk/CMakeLists.txt
+++ b/Matplot_vtk/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library( matplot matplot.cpp )
 target_link_libraries(matplot ${VTK_LIBRARIES})
+install ( TARGETS matplot DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )
