--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,3 +186,14 @@ target_link_libraries(Hello lemmacore)
 add_dependencies(Hello YAML-CPP)
 
 
+# add a target to generate API documentation with Doxygen
+find_package(Doxygen)
+	if(DOXYGEN_FOUND)
+	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Documentation/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Documentation/Doxyfile @ONLY)
+	add_custom_target(doc
+	${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Documentation/Doxyfile
+	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+	COMMENT "Generating API documentation with Doxygen" VERBATIM
+	)
+	endif(DOXYGEN_FOUND)
+
