Made changes to testing protocol

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,8 +204,8 @@ if(CXXTEST_FOUND)
     enable_testing()
     #CXXTEST_ADD_TEST(tester_executable runner.cpp
     #                    ${CMAKE_CURRENT_SOURCE_DIR}/src/myTestsuite.h)
-	CXXTEST_ADD_TEST(unittest_foo foo_test.cc
-                      ${CMAKE_CURRENT_SOURCE_DIR}/src/myTestSuite.h)
+	#CXXTEST_ADD_TEST(unittest_foo foo_test.cc
+    #                  ${CMAKE_CURRENT_SOURCE_DIR}/src/myTestSuite.h)
     #target_link_libraries(unittest_foo foo) # as needed
 #	else()
 #	message(FATAL_ERROR "CxxTest not found.")
@@ -222,10 +222,9 @@ add_subdirectory (Modules)
 # 
 include_directories(${CMAKE_INSTALL_PREFIX}/include)
 
-add_executable(Hello "${PROJECT_SOURCE_DIR}/src/test.cpp")
-target_link_libraries(Hello lemmacore)
-add_dependencies(Hello YAML-CPP)
-
+#add_executable(Hello "${PROJECT_SOURCE_DIR}/src/test.cpp")
+#target_link_libraries(Hello lemmacore)
+#add_dependencies(Hello YAML-CPP)
 
 # add a target to generate API documentation with Doxygen
 # ALL make documentation build by default if possible
