Fix for LayeredEarthEM test

--- a/Modules/FDEM1D/CMakeLists.txt
+++ b/Modules/FDEM1D/CMakeLists.txt
@@ -5,6 +5,11 @@ add_subdirectory("src")
 
 add_library( fdem1d ${FEM1DSOURCE} )  
 target_link_libraries(fdem1d "lemmacore")
+set_target_properties(fdem1d PROPERTIES 
+	VERSION  "${LEMMA_VERSION}"
+	SOVERSION "${LEMMA_VERSION_MAJOR}.${LEMMA_VERSION_MINOR}"
+	PROJECT_LABEL "Lemma ${LABEL_SUFFIX}"
+)
 
 install ( TARGETS fdem1d DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )
 
